--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<!--{{name}}
+<hr>
+
+<button class="btn btn-primary" [disabled]="prop">send </button>
+
+<hr>
+
+<button class="btn btn-primary" [disabled]="prop" (click)="add()">send </button>
+
+<hr>
+
+<input type="text" [(ngModel)]="nameuser">
+{{nameuser}}-->
+salut 4 arctic 9 Home
