--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">4SE5</a>
+  <a class="navbar-brand" href="#">Navbar</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -15,26 +15,21 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/home">Home </a>
+        <a class="nav-link" href="#" routerLink="/home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/residences">Residences</a>
+        <a class="nav-link" href="#" routerLink="/residence">Residence</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/news">News</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/newresidence">New Residence</a>
+        <a class="nav-link" href="#" routerLink="/formresidence">Add residence</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/annance">annance</a>
+        <a class="nav-link" href="#" routerLink="/annonce">Annonce</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/annance/list">list</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/newss', 1]">News_params</a>
+        <a class="nav-link" href="#" routerLink="/annonce/listannonce"
+          >ListAnnonce</a
+        >
       </li>
     </ul>
   </div>
