--- a/frontend/src/app/form-residence/form-residence.component.html
+++ b/frontend/src/app/form-residence/form-residence.component.html
@@ -1,15 +1,17 @@
 <p>form-residence works!</p>
+<div class="container">
+   
 
 <form [formGroup]="formR">
 
-    <div class="form-group">
+    <!--<div class="form-group">
         <label for="exampleInputEmail1">Id</label>
         <input type="email" class="form-control" formControlName="id" id="exampleInputEmail1" aria-describedby="emailHelp">
 <div class="alert alert-danger" *ngIf="id?.invalid && id?.touched">
 invalid id
 </div>
 
-    </div>
+    </div>-->
 
       <div class="form-group">
         <label for="exampleInputEmail1">Name</label>
@@ -47,3 +49,4 @@ invalid id
 
 
 </form>
+</div>
