--- a/frontend/src/app/update/update.component.html
+++ b/frontend/src/app/update/update.component.html
@@ -1,7 +1,7 @@
 <p>form-residence works!</p>
 <div class="container">
   <form [formGroup]="formR">
-    <div class="form-group">
+   <!-- <div class="form-group">
       <label for="exampleInputEmail1">Id</label>
       <input
         type="email"
@@ -16,7 +16,7 @@
       >
         invalid id
       </div>
-    </div>
+    </div>-->
 
     <div class="form-group">
       <label for="exampleInputEmail1">Name</label>
